@@ -10,16 +10,18 @@ function ok(r,e)
 {
   document.write((r == e ? "OK: " : "NOT OK "), r, " -> ", e, "<br/>");
 }
-requestFile("../dat/skin/default.xml", process_xml);
 function process_xml(r, u)
 {
   conf = r.responseXML;
   ok(XML.getNode(conf, "/skin/ship/name").textContent, "Sundog");
   ok(XML.getNode(conf, "/skin/ship/map/@name").nodeValue, "pod");
-  ok(XML.getNode(conf, "/skin/ship/map/area[4]/@alt").nodeValue, "Airlock");
-  ok(XML.getNode(conf, "/skin/ship/map/area[@alt='Airlock']/@coords").nodeValue, "151,227,183,246");
-  ok(XML.getNode(conf, "/skin/ship/map/area[@alt='Airlock']/@shape").nodeValue, "rect");
+  ok(XML.getNode(conf, "/skin/ship/map/area[4]/@title").nodeValue, "Airlock");
+  ok(XML.getNode(conf, "/skin/ship/map/area[@title='Airlock']/@coords").nodeValue, "151,227,183,246");
+  ok(XML.getNode(conf, "/skin/ship/map/area[@title='Airlock']/@shape").nodeValue, "rect");
+  document.write("done");
+  return true;
 }
+requestFile("../dat/skin/default.xml", process_xml);
 </script>
 <address>
 </address>
